Fix HTML tag for subheading in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
 <body>
   <h1>Welcome to The Listening Library Magazine Site</h1>
-  <h2><Welcome to The Listening Library, a place shaped by quiet curiosity. Here, we become archaeologists of each other’s imaginations, uncovering stories, hints, and unfinished beauty./h2>
+  <h2>Welcome to The Listening Library, a place shaped by quiet curiosity. Here, we become archaeologists of each other’s imaginations, uncovering stories, hints, and unfinished beauty.</h2>
 
 </body>
 <html/>
